<resources>
    <string name="activity_main_title">Peak Quizzes</string>

    <!--    Register -->
    <string name="registration_card_title">Registration</string>
    <string name="registration_subtitle">Please register your new account</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_account_type">Account Type</string>
    <string name="account_type_a">Teacher</string>
    <string name="account_type_b">Student</string>
    <string name="account_type_c">Parent</string>
    <string name="registration_button_submit">Register</string>
    <string name="registration_footnote">Already have any account? Login <b><font fgcolor="#4a6ee6">here</font></b></string>

    <!--    Login -->
    <string name="login_card_title">Welcome!</string>
    <string name="login_subtitle">Please enter your email and password to sign in to your account</string>
    <string name="login_button">Login</string>
    <string name="login_footnote">New to Quiz App? \nCreate a new account <b><font fgcolor="#4a6ee6">here</font></b></string>

    <!--    Generic card-->
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_name_hint">Full Name</string>

    <!--    MainActivity Content-->
    <string name="app_name">Peak Quizzes</string>
    <string name="main_activity_title">Welcome!</string>


<!--    Navigation Buttons -->
    <string name="create_quiz_button">Create New Quiz</string>
    <string name="edit_quiz_button">Edit My Quizzes</string>
    <string name="test_my_knowledge_button">Test My Knowledge</string>
    <string name="view_quizzes_button">View All Quizzes</string>
    <string name="help_button">Help</string>

<!--    Create quiz string-->
    <string name="create_quiz_confirm_text">You’re almost there! \n\n Let’s create a new Peak quiz with ease</string>
    <string name="create_quiz_confirm_title">Let\'s Do This!</string>
    <string name="create_quiz_confirm_button">Create Your Quiz</string>
    <string name="create_quiz_title_title">Your Quiz Title…</string>
    <string name="create_quiz_title_text">What would you  like to call your quiz?</string>
    <string name="create_title_hint">Quiz Title</string>
    <string name="create_quiz_title_button">Submit Title</string>
    <string name="create_quiz_form_title">Question</string>
    <string name="create_quiz_question_form_text_1">Your Question</string>
    <string name="create_quiz_question_hint">Question</string>
    <string name="create_quiz_question_form_text_2">Your answers…</string>
    <string name="create_quiz_question_form_text_3">Enter the correct answer</string>
    <string name="create_quiz_question_form_text_4">Enter some incorrect answers to fool your student</string>
    <string name="create_quiz_a1">Answer 1</string>
    <string name="create_quiz_a2">Answer 2</string>
    <string name="create_quiz_a3">Answer 3</string>
    <string name="create_quiz_a4">Answer 4</string>
    <string name="create_quiz_form_next_button">Next</string>
    <string name="create_quiz_form_submit_button">Submit &amp; Review</string>
    <string name="create_quiz_form_add_question_button">Add Another Question</string>
    <string name="create_quiz_answer_title">The Answer…</string>
    <string name="create_quiz_question_answer_text_1">Which is the correct answer?</string>
    <string name="example_answer_a">E.g. Answer 1: Blue</string>
    <string name="example_answer_b">E.g. Answer 2: Red</string>
    <string name="example_answer_c">E.g. Answer 3: Pink</string>
    <string name="display_quiz_1">E.g. Title 1</string>
    <string name="display_quiz_2">E.g. Title 2</string>
    <string name="display_quiz_3">E.g. Title 3</string>
    <string name="display_quiz_4">E.g. Title 4</string>
    <string name="display_quiz_text_2">Idea of your own?</string>
    <string name="display_quiz_title">Try a New Quiz…</string>
    <string name="display_quiz_text_1">Click on a quiz to launch it</string>
    <string name="question_number_title">Question 1</string>
    <string name="quiz_question">E.g. Quiz Question</string>
    <string name="quiz_question_number">1.</string>
    <string name="quiz_question_correct_results_text">Congratulations! You got it right!</string>
    <string name="quiz_question_wrong_results_text">Hmm… That doesn\'t seem quite right</string>
    <string name="next_question_button">Next Question</string>
    <string name="display_quiz_results_title">Your Results</string>
    <string name="display_quiz_results_text">Congratulations, your score is:</string>
    <string name="display_quiz_results_number">30%</string>
    <string name="home_button">Return Home</string>
    <string name="logout_button">Logout</string>


</resources>