<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stripes">

    <androidx.cardview.widget.CardView
        style="@style/card_generic"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/text_heading_1"
                android:id="@+id/title_registration"
                android:text="@string/registration_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                />

            <TextView
                style="@style/text_body_light"
                android:id="@+id/registration_info_text"
                android:text="@string/registration_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:visibility="visible" />

            <TextView
                style="@style/text_body_1"
                android:id="@+id/registration_account_type"
                android:text="@string/registration_account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                style="@style/text_body_1"
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/account_type_a" />
            <RadioButton
                style="@style/text_body_1"
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/account_type_b"/>
            <RadioButton
                style="@style/text_body_1"
                android:id="@+id/radio_button_3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/account_type_c"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_name"
                    android:hint="@string/registration_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_username"
                    android:hint="@string/registration_username_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_email"
                    android:hint="@string/registration_email_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_password"
                    android:hint="@string/registration_password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>


                <Button
                    style="@style/BlueCustomButton"
                    android:id="@+id/button_register"
                    android:text="@string/registration_button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/button_login_redirect"
                android:text="@string/registration_footnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/DarkGrey"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>