<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.QuizAnswerFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_quiz_answer_title"
        style="@style/text_heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_quiz_answer_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/card_generic"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/create_quiz_answer_title"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/create_quiz_question_answer_text_1"
                style="@style/text_body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/create_quiz_question_answer_text_1" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_answer_1"
                android:padding="12dp">

                <RadioButton
                    android:id="@+id/radio_button_answer_1"
                    style="@style/text_body_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_answer_a" />

                <RadioButton
                    android:id="@+id/radio_button_answer_2"
                    style="@style/text_body_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_answer_b" />

                <RadioButton
                    android:id="@+id/radio_button_answer_3"
                    style="@style/text_body_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_answer_c" />
            </RadioGroup>

            <Button
                android:id="@+id/create_quiz_form_add_question_button"
                style="@style/BlueCustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_quiz_form_add_question_button" />

            <Button
                android:id="@+id/create_quiz_form_submit_button"
                style="@style/BlueCustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_quiz_form_submit_button" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>