<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/display_quiz_title"
        style="@style/text_heading_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_quiz_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        style="@style/card_generic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_quiz_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/text_body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/display_quiz_text_1"
                android:id="@+id/display_quiz_text_1"/>

            <Button
                android:id="@+id/display_quiz_1"
                style="@style/PinkCustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_quiz_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/display_quiz_2"
                style="@style/PinkCustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_quiz_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_quiz_button" />


            <Button
                android:id="@+id/display_quiz_3"
                style="@style/PinkCustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_quiz_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/test_my_knowledge_button" />

            <Button
                android:id="@+id/display_quiz_4"
                style="@style/PinkCustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_quiz_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_quizzes_button" />

            <TextView
                style="@style/text_body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/display_quiz_text_2"
                android:id="@+id/display_quiz_text_2"/>

            <Button
                android:id="@+id/create_quiz_button"
                style="@style/BlueCustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_quiz_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/display_quiz_4" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>