<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/create_quiz_form_title"
        style="@style/text_heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_quiz_form_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/card_generic"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/create_quiz_form_title"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/create_quiz_question_form_text_1"
                style="@style/text_body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/create_quiz_question_form_text_1" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/create_quiz_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_quiz_question_hint"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/create_quiz_question_form_text_2"
                style="@style/text_body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/create_quiz_question_form_text_2"
                android:visibility="visible" />

            <TextView
                android:id="@+id/create_quiz_question_form_text_3"
                style="@style/text_body_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_quiz_question_form_text_3"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/create_quiz_a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_quiz_a1"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/create_quiz_a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_quiz_a2"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/create_quiz_a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_quiz_a3"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_quiz_form_next_button"
                style="@style/BlueCustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_quiz_form_next_button" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>