<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.ParenttButtonsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title">

        <Button
            android:id="@+id/view_quizzes_button"
            style="@style/BlueCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_quizzes_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/help_button"
            style="@style/BlueCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_quizzes_button" />

        <Button
            android:id="@+id/logout_button"
            style="@style/BlueCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>